@startuml
abstract class gimnasio.Clases
abstract class gimnasio.Persona
class gimnasio.Alumno
class gimnasio.ClasesConcrectFactory
class gimnasio.Gimnasio
class gimnasio.Musculacion
class gimnasio.Profesor
class gimnasio.Yoga
class igu.pantalla
class java.sql.Connection
class java.util.ArrayList
class java.util.Scanner
class persistencia.Database
interface gimnasio.ClasesAbstractFactory
gimnasio.Alumno --|> gimnasio.Persona
gimnasio.ClasesConcrectFactory --|> gimnasio.ClasesAbstractFactory
gimnasio.Musculacion --|> gimnasio.Clases
gimnasio.Profesor --|> gimnasio.Persona
gimnasio.Yoga --|> gimnasio.Clases
@enduml